[package]
name = "robotjs"
version = "0.7.0"
edition = "2021"
description = "Node.js Desktop Automation with Rust bindings."
authors = ["Matthew Herod"]
license = "MIT"
repository = "https://github.com/mherod/robotjs.git"
homepage = "https://github.com/mherod/robotjs"

[lib]
name = "robotjs"
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2.12.2", features = ["napi4"] }
napi-derive = "2.12.2"
enigo = "0.1.0"
screenshots = "0.5.0"
image = "0.24.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true

[dev-dependencies]
napi = { version = "2.12.2", features = ["async"] }

[package.metadata.napi-rs]
name = "@mherod/robotjs"
